WinFMP/WinFMP.pas


function fmp_maskoff(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
begin
	Result := pWINFMP.maskoff(rhythm_flag, ah);
end;


function fmp_loadrhythmsample(path : PChar) : Boolean; stdcall;
begin
	Result := pWINFMP.loadrhythmsample(path);
end;


function fmp_setpcmdir(pcmdir : PChar) : Boolean ; stdcall;
begin
	Result := pWINFMP.setpcmdir(pcmdir);
end;


procedure fmp_setpcmrate(rate : Integer); stdcall;
begin
	pWINFMP.setpcmrate(rate);
end;


procedure fmp_setppzrate(rate : Integer); stdcall;
begin
	pWINFMP.setppzrate(rate);
end;


procedure fmp_fadeout(speed : Integer); stdcall;
begin
	pWINFMP.fadeout(speed);
end;


procedure fmp_fadeout2(speed : Integer); stdcall;
begin
	pWINFMP.fadeout2(speed);
end;


procedure fmp_setfmcalc55k(flag : Boolean); stdcall;
begin
	pWINFMP.setfmcalc55k(flag);
end;


procedure fmp_setppzinterpolation(ip : Boolean); stdcall;
begin
	pWINFMP.setppzinterpolation(ip);
end;


procedure fmp_setadpcmppz8emulate(flag : Boolean); stdcall;
begin
	pWINFMP.setadpcmppz8emulate(flag);
end;


function fmp_getcomment(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
begin
	Result := pWINFMP.getcomment(dest, musdata, size);
end;


function fmp_getcomment2(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
begin
	Result := pWINFMP.getcomment2(dest, musdata, size);
end;


function fmp_getcomment3(dest : TComment; musdata : Pointer; size : Integer) : PComment; stdcall;
begin
	Result := pWINFMP.getcomment3(dest, musdata, size);
end;


function fmp_fgetcomment(dest : PChar; filename : PChar) : Integer; stdcall;
begin
	Result := pWINFMP.fgetcomment(dest, filename);
end;


function fmp_fgetcomment2(dest : PChar; filename : PChar) : Integer; stdcall;
begin
	Result := pWINFMP.fgetcomment2(dest, filename);
end;


function fmp_fgetcomment3(dest : TComment; filename : PChar) : Integer; stdcall;
begin
	Result := pWINFMP.fgetcomment3(dest, filename);
end;


function fmp_getdefinedpcmfilename(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
begin
	Result := pWINFMP.getdefinedpcmfilename(dest, musdata, size);
end;


function fmp_getdefinedppzfilename(dest : PChar; musdata : Pointer; size : Integer; bufnum : Integer) : PChar; stdcall;
begin
	Result := pWINFMP.getdefinedppzfilename(dest, musdata, size, bufnum);
end;


function fmp_fgetdefinedpcmfilename(dest : PChar; filename : PChar) : Integer; stdcall;
begin
	Result := pWINFMP.fgetdefinedpcmfilename(dest, filename);
end;


function fmp_fgetdefinedppzfilename(dest : PChar; filename : PChar; bufnum : Integer) : Integer; stdcall;
begin
	Result := pWINFMP.fgetdefinedppzfilename(dest, filename, bufnum);
end;


function fmp_getmusicfilename(dest : PChar) : PChar; stdcall;
begin
	Result := pWINFMP.getmusicfilename(dest);
end;


function fmp_getpcmfilename(dest : PChar) : PChar; stdcall;
begin
	Result := pWINFMP.getpcmfilename(dest);
end;


function fmp_getppzfilename(dest : PChar; bufnum : Integer) : PChar; stdcall;
begin
	Result := pWINFMP.getppzfilename(dest, bufnum);
end;


procedure fmp_setfmvoldown(voldown : Integer); stdcall;
begin
	pWINFMP.setfmvoldown(voldown);
end;


procedure fmp_setssgvoldown(voldown : Integer); stdcall;
begin
	pWINFMP.setssgvoldown(voldown);
end;


procedure fmp_setrhythmvoldown(voldown : Integer); stdcall;
begin
	pWINFMP.setrhythmvoldown(voldown);
end;


procedure fmp_setadpcmvoldown(voldown : Integer); stdcall;
begin
	pWINFMP.setadpcmvoldown(voldown);
end;


procedure fmp_setppzvoldown(voldown : Integer); stdcall;
begin
	pWINFMP.setppzvoldown(voldown);
end;


function fmp_getfmvoldown : Integer; stdcall;
begin
	Result := pWINFMP.getfmvoldown;
end;


function fmp_getssgvoldown : Integer; stdcall;
begin
	Result := pWINFMP.getssgvoldown;
end;


function fmp_getrhythmvoldown : Integer; stdcall;
begin
	Result := pWINFMP.getrhythmvoldown;
end;


function fmp_getadpcmvoldown : Integer; stdcall;
begin
	Result := pWINFMP.getadpcmvoldown;
end;


function fmp_getppzvoldown : Integer; stdcall;
begin
	Result := pWINFMP.getppzvoldown;
end;


procedure fmp_setpos(pos : Integer); stdcall;
begin
	pWINFMP.setpos(pos);
end;


procedure fmp_setpos2(pos : Integer); stdcall;
begin
	pWINFMP.setpos2(pos);
end;


function fmp_getpos : Integer; stdcall;
begin
	Result := pWINFMP.getpos;
end;


function fmp_getpos2 : Integer; stdcall;
begin
	Result := pWINFMP.getpos2;
end;


function fmp_getlength(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
begin
	Result := pWINFMP2.getlength(filename, length, loop);
end;


function fmp_getlength2(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
begin
	Result := pWINFMP2.getlength2(filename, length, loop);
end;


function fmp_getloopcount : Integer; stdcall;
begin
	Result := pWINFMP.getloopcount;
end;


procedure fmp_setfmwait(nsec : Integer); stdcall;
begin
	pWINFMP.setfmwait(nsec);
end;


procedure fmp_setssgwait(nsec : Integer); stdcall;
begin
	pWINFMP.setssgwait(nsec);
end;


procedure fmp_setrhythmwait(nsec : Integer); stdcall;
begin
	pWINFMP.setrhythmwait(nsec);
end;


procedure fmp_setadpcmwait(nsec : Integer); stdcall;
begin
	pWINFMP.setadpcmwait(nsec);
end;


function fmp_getsyncscnt : Integer; stdcall;
begin
	Result := pWINFMP.getsyncscnt;
end;


function fmp_getlastsyncexttime : Integer; stdcall;
begin
	Result := pWINFMP.getlastsyncexttime;
end;


function fmp_getworks : PWORKS; stdcall;
begin
	Result := pWINFMP.getworks;
end;


function fmp_querypdzfz8xinterface(const riid: TIID; var ppv): HResult; stdcall;
begin
	Result := pWINFMP.querypdzfz8xinterface(riid, ppv);
end;


{$ENDIF}

initialization
//=============================================================================
// DLL 読み込み＆関数アドレス取得
//=============================================================================
	HWinFMP := LoadLibrary(WINFMP_DLLNAME);
	if(HWinFMP = 0) then begin
		ShowMessage(WINFMP_MSG_DLLNOTFOUND);
		Halt;
	end;

	// バージョンチェック
	fmp_getversion := GetProcAddress2(HWinFMP, 'fmp_getversion');
	fmp_getinterfaceversion := GetProcAddress2(HWinFMP, 'fmp_getinterfaceversion');


	if(fmp_getinterfaceversion < WINFMP_MININTERFACEVERSION) then begin
		ShowMessage(WINFMP_MSG_ERROR_LOWER);
		Halt;
	end;

	if(fmp_getinterfaceversion >= WINFMP_MAXINTERFACEVERSION) then begin
		ShowMessage(WINFMP_MSG_ERORR_UPPER);
		Halt;
	end;


	// インスタンス取得関数
	fmp_CoCreateInstance := GetProcAddress2(HWinFMP, 'fmp_CoCreateInstance');


{$IFDEF TESTCOMINTERFACE}
//=============================================================================
// インスタンス取得
//=============================================================================

	if(fmp_CoCreateInstance(CLSID_WINFMP, Nil, CLSCTX_ALL, IID_IWINFMP, pWINFMP) <> S_OK) then begin
		ShowMessage(WINFMP_MSG_COMNOTFOUND);
	end;

	if(fmp_CoCreateInstance(CLSID_WINFMP, Nil, CLSCTX_ALL, IID_IWINFMP, pWINFMP2) <> S_OK) then begin
		ShowMessage(WINFMP_MSG_COMNOTFOUND);
	end;

{$ELSE}

	// 残りの関数アドレスの取得
	fmp_init := GetProcAddress2(HWinFMP, 'fmp_init');
	fmp_load := GetProcAddress2(HWinFMP, 'fmp_load');
	fmp_load2 := GetProcAddress2(HWinFMP, 'fmp_load2');
	fmp_start := GetProcAddress2(HWinFMP, 'fmp_start');
	fmp_stop := GetProcAddress2(HWinFMP, 'fmp_stop');
	fmp_getpcmdata := GetProcAddress2(HWinFMP, 'fmp_getpcmdata');
	fmp_maskon := GetProcAddress2(HWinFMP, 'fmp_maskon');
	fmp_maskoff := GetProcAddress2(HWinFMP, 'fmp_maskoff');
	fmp_loadrhythmsample := GetProcAddress2(HWinFMP, 'fmp_loadrhythmsample');
	fmp_setpcmdir := GetProcAddress2(HWinFMP, 'fmp_setpcmdir');
	fmp_setpcmrate := GetProcAddress2(HWinFMP, 'fmp_setpcmrate');
	fmp_setppzrate := GetProcAddress2(HWinFMP, 'fmp_setppzrate');
	fmp_fadeout := GetProcAddress2(HWinFMP, 'fmp_fadeout');
	fmp_fadeout2 := GetProcAddress2(HWinFMP, 'fmp_fadeout2');
	fmp_setfmcalc55k := GetProcAddress2(HWinFMP, 'fmp_setfmcalc55k');
	fmp_setppzinterpolation := GetProcAddress2(HWinFMP, 'fmp_setppzinterpolation');
	fmp_setadpcmppz8emulate := GetProcAddress2(HWinFMP, 'fmp_setadpcmppz8emulate');
	fmp_getcomment := GetProcAddress2(HWinFMP, 'fmp_getcomment');
	fmp_getcomment2 := GetProcAddress2(HWinFMP, 'fmp_getcomment2');
	fmp_getcomment3 := GetProcAddress2(HWinFMP, 'fmp_getcomment3');
	fmp_fgetcomment := GetProcAddress2(HWinFMP, 'fmp_fgetcomment');
	fmp_fgetcomment2 := GetProcAddress2(HWinFMP, 'fmp_fgetcomment2');
	fmp_fgetcomment3 := GetProcAddress2(HWinFMP, 'fmp_fgetcomment3');
	fmp_getdefinedpcmfilename := GetProcAddress2(HWinFMP, 'fmp_getdefinedpcmfilename');
	fmp_getdefinedppzfilename := GetProcAddress2(HWinFMP, 'fmp_getdefinedppzfilename');
	fmp_fgetdefinedpcmfilename := GetProcAddress2(HWinFMP, 'fmp_fgetdefinedpcmfilename');
	fmp_fgetdefinedppzfilename := GetProcAddress2(HWinFMP, 'fmp_fgetdefinedppzfilename');
	fmp_getmusicfilename := GetProcAddress2(HWinFMP, 'fmp_getmusicfilename');
	fmp_getpcmfilename := GetProcAddress2(HWinFMP, 'fmp_getpcmfilename');
	fmp_getppzfilename := GetProcAddress2(HWinFMP, 'fmp_getppzfilename');
	fmp_setfmvoldown := GetProcAddress2(HWinFMP, 'fmp_setfmvoldown');
	fmp_setssgvoldown := GetProcAddress2(HWinFMP, 'fmp_setssgvoldown');
	fmp_setrhythmvoldown := GetProcAddress2(HWinFMP, 'fmp_setrhythmvoldown');
	fmp_setadpcmvoldown := GetProcAddress2(HWinFMP, 'fmp_setadpcmvoldown');
	fmp_setppzvoldown := GetProcAddress2(HWinFMP, 'fmp_setppzvoldown');
	fmp_getfmvoldown := GetProcAddress2(HWinFMP, 'fmp_getfmvoldown');
	fmp_getssgvoldown := GetProcAddress2(HWinFMP, 'fmp_getssgvoldown');
	fmp_getrhythmvoldown := GetProcAddress2(HWinFMP, 'fmp_getrhythmvoldown');
	fmp_getadpcmvoldown := GetProcAddress2(HWinFMP, 'fmp_getadpcmvoldown');
	fmp_getppzvoldown := GetProcAddress2(HWinFMP, 'fmp_getppzvoldown');
	fmp_setpos := GetProcAddress2(HWinFMP, 'fmp_setpos');
	fmp_setpos2 := GetProcAddress2(HWinFMP, 'fmp_setpos2');
	fmp_getpos := GetProcAddress2(HWinFMP, 'fmp_getpos');
	fmp_getpos2 := GetProcAddress2(HWinFMP, 'fmp_getpos2');
	fmp_getlength := GetProcAddress2(HWinFMP, 'fmp_getlength');
	fmp_getlength2 := GetProcAddress2(HWinFMP, 'fmp_getlength2');
	fmp_getloopcount := GetProcAddress2(HWinFMP, 'fmp_getloopcount');
	fmp_setfmwait := GetProcAddress2(HWinFMP, 'fmp_setfmwait');
	fmp_setssgwait := GetProcAddress2(HWinFMP, 'fmp_setssgwait');
	fmp_setrhythmwait := GetProcAddress2(HWinFMP, 'fmp_setrhythmwait');
	fmp_setadpcmwait := GetProcAddress2(HWinFMP, 'fmp_setadpcmwait');
	fmp_getsyncscnt := GetProcAddress2(HWinFMP, 'fmp_getsyncscnt');
	fmp_getlastsyncexttime := GetProcAddress2(HWinFMP, 'fmp_getlastsyncexttime');
	fmp_getworks := GetProcAddress2(HWinFMP, 'fmp_getworks');
  fmp_querypdzfz8xinterface := Nil;		// DLLインターフェイスでは未サポート

{$ENDIF}


//----------------------------------------------------------------------------
// DLL 開放
//----------------------------------------------------------------------------
finalization

{$IFDEF TESTCOMINTERFACE}
	{$IFDEF VER90}
	//%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
	// Delphi 2.0J
	//%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
		pWINFMP.Release;
		pWINFMP2.Release;
	{$ELSE}
	//%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
	// Delphi3 以降
	//%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		pWINFMP := nil;
 		pWINFMP2 := nil;

	{$ENDIF}
{$ENDIF}

	if(HWinFMP <> 0) then begin
		FreeLibrary(HWinFMP);
	end;


end.
